--- a/index.html
+++ b/index.html
@@ -12,43 +12,27 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            position: relative;
-            overflow: hidden;
             background-color: #f0f0f0; /* 背景色を追加 */
         }
-        #background {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background: url('cheki.PNG') no-repeat center center;
-            background-size: cover;
-            z-index: 1;
-        }
         #videoElement {
-            position: absolute;
-            top: 10%;
-            left: 25%;
-            width: 50%;
-            height: 70%;
+            width: 60vw; /* 画面の横幅の60% */
+            height: 45vw; /* 画面の横幅の60%に対する4:3の比率 */
             object-fit: cover;
             z-index: 2;
         }
         #photoFrame {
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
+            position: relative;
+            width: 60vw; /* 画面の横幅の60% */
+            height: 45vw; /* 画面の横幅の60%に対する4:3の比率 */
+            margin: auto;
             z-index: 3;
         }
         #overlay {
             position: absolute;
-            top: 10%;
-            left: 25%;
-            width: 50%;
-            height: 70%;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             opacity: 0; /* 透明度を初期化（0 = 0%） */
             background-size: cover;
             background-position: center;
@@ -60,7 +44,6 @@
     </style>
 </head>
 <body>
-    <div id="background"></div>
     <video id="videoElement" autoplay></video>
     <div id="photoFrame">
         <canvas id="photoCanvas"></canvas>
